--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link href='http://fonts.googleapis.com/css?family=Parisienne' rel='stylesheet' type='text/css' />
 	<link href='http://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css' />
-	<link rel="stylesheet" type="text/css" href="static/dolomyte.css" />
+	<link rel="stylesheet" type="text/css" href="css/dolomyte.css" />
 </head>
 <body>
 	<script data-require="angular.js@1.4.0-beta.6" data-semver="1.4.0-beta.6" src="https://code.angularjs.org/1.4.0-beta.6/angular.js"></script>
     <script data-require="angular-route@1.4.0-beta.6" data-semver="1.4.0-beta.6" src="https://code.angularjs.org/1.4.0-beta.6/angular-route.js"></script>
-	<script type="text/javascript" src='static/js/app.js'></script>
-	<script type="text/javascript" src='app/gitpage.js'></script>
+	<script type="text/javascript" src='js/app.js'></script>
+	<script type="text/javascript" src='js/gitpage.js'></script>
 	<div class='wrapper'>
 	<div ng-controller='HomeCtrl'>
 	<header>
