Changes to about html

--- a/dolomyte.html
+++ b/dolomyte.html
@@ -6,7 +6,17 @@
 		<div class='med-content navy'>
 		<h3>About</h3>
 			<p>
-				Grumpy wizards make toxic brew for the evil Queen and Jack. One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked.
+				Hello, and Welcome to my Github Page!
+				I'm a 25 year old developer from the North East of England.
+				By day I'm a professional web application developer for SaleCycle,
+				where I help to create a scalable cloud based re-marketing app.  We use
+				a hole host of technologies including, but not limited to C#, Couchbase and
+				Knockout.js.
+				<br />
+				By night I'm a hobby developer enthusiast.  I create little projects for the fun of learning new technologies, patterns and
+				practices.  Some of those projects end up on GitHub so feel free to have a snoop around! 
+				<br />
+				Adios amigos!
 			</p>
 		</div>
 
