--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 	</header>
 		<div ng-class="slide" class='side-bar' >
 				<ul>
-				<li><a href="https://github.com/HistoireDeBabar/Dolomyte">Repository</a></li>
+				<li><a href="https://github.com/HistoireDeBabar">GitHub</a></li>
+				<li><a href="https://twitter.com/Histoiredebabar">Twitter</a></li>
 				</ul>
 		</div>
 		<div ng-view class='cont'>
