--- a/index.html
+++ b/index.html
@@ -1,63 +1,14 @@
-<!-- <<<<<<< HEAD
-<!DOCTYPE html>
-<html ng-app="dolomyte">
-<head>
-	<title>DOLOMYTE</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link href='http://fonts.googleapis.com/css?family=Parisienne' rel='stylesheet' type='text/css' />
-	<link href='http://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css' />
-	<link rel="stylesheet" type="text/css" href="css/dolomyte.css" />
-</head>
-<body>
-	<script data-require="angular.js@1.4.0-beta.6" data-semver="1.4.0-beta.6" src="https://code.angularjs.org/1.4.0-beta.6/angular.js"></script>
-    <script data-require="angular-route@1.4.0-beta.6" data-semver="1.4.0-beta.6" src="https://code.angularjs.org/1.4.0-beta.6/angular-route.js"></script>
-	<script type="text/javascript" src='js/app.js'></script>
-	<script type="text/javascript" src='js/gitpage.js'></script>
-	<div class='wrapper'>
-	<div ng-controller='HomeCtrl'>
-	<header>
-	<!-- DOLOMYTE -->
-			<div id='head' class='links'>
-				<h1>DOLO<br />MYTE</h1>
-				<span id='more' class='more-icon clickable' ng-click="showNav()"></span>
-			</div>
-
-	</header>
-		<div ng-class="slide" class='side-bar' >
-				<ul>
-				<li ng-click="changePage(home)">Home</li>
-				<li ng-click="github()">GitHub</li>
-				<li ng-click="twitter()">Twitter</li>
-				</ul>
-		</div>
-		<div ng-view class='cont'>
-			<!-- Content is Loaded Here -->
-		</div>
-	</div>
-	<footer>
-		<!-- comment -->
-	</footer>
-	</div>
-</body>
-======= -->
 <html>
 <head>
 	<title>HistoireDeBabar</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" type="text/css" href="style/style.css">
+	<link rel="stylesheet" type="text/css" href="dist/style.css">
 
 </head>
 
 <body>
 
-<div id="banner">
-	<h1>HistoireDeBabar </h1>
-	<a href="https://github.com/HistoireDeBabar"><span class="ico github"></span></a>
-</div>
 
-
-
+<script src="src/app.js"></script>
 </body>
-
-<script src="func/min/app-min.js"></script>
 </html>
