--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<title>HistoireDeBabar</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="dist/style.css">
-
+  <link rel="shortcut icon" href="dist/favicon.ico">
+  <link rel="icon" href="dist/favicon.ico">
 </head>
 
 <body>
